ajustei as cores do light mode

--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -58,7 +58,7 @@
     </header>
 
     <section>
-        <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">O QUE SÃO?</h2>
+        <h2 class="margin"  >O QUE SÃO?</h2>
         <p>Os artefatos são ferramentas de gerenciamento utilizadas no scrum que além de auxiliarem no
             planejamento também fornecem informações importantes para a equipe e os demais interessados no projeto.
             A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
@@ -68,7 +68,7 @@
     <br>
 
     <section>
-        <h2 id="bkproduto" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">BACKLOG DO PRODUTO</h2>
+        <h2 id="bkproduto" class="margin">BACKLOG DO PRODUTO</h2>
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
         <p id="ajusteresp"> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
@@ -76,7 +76,7 @@
             satisfazendo
             as necessidades do cliente.
         </p>
-        <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">Como montar o Backlog?</h2>
+        <h2 class="margin">Como montar o Backlog?</h2>
         <p> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os
             requisitos. Após entender a
             visão do produto, as Epics, funcionalidades de maior nível, devem ser identificadas e priorizadas em relação
@@ -161,14 +161,14 @@
     <br>
 
     <section>
-        <h2 id="graficobd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;margin-left: 4%;">BURNDOWN</h2>
+        <h2 id="graficobd" class="margin">BURNDOWN</h2>
         <p>O Burndown é um gráfico que representa a relação entre a estimativa para o
             período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
             grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em
             relação
             ao tempo de finalização.</p>
         <img src="imagens/burndown.png" id="burndown" alt="burndown">
-        <h2 style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-top:10%; margin-left: 4%;">Como criar um Burndown?</h2>
+        <h2 class="margin">Como criar um Burndown?</h2>
         <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para
             concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
             que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao
@@ -254,7 +254,7 @@
     <br>
 
     <section>
-        <h2 id="us" class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">USER STORY</h2>
+        <h2 id="us"  class="margin">USER STORY</h2>
         <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio
             ponto de
             vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para
@@ -270,7 +270,7 @@
                 os requisitos do produto são representados apenas por essa parte.</p>
         </div>
 
-        <h2 class="margin" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;">Como fazer uma User Story?</h2>
+        <h2 class="margin">Como fazer uma User Story?</h2>
         <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
             Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é
             necessário
@@ -281,10 +281,10 @@
     <br>
 
     <section>
-        <h2 id="dd" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px; margin-left: 4%;">DOR E DOD</h2>
+        <h2 id="dd" class="margin">DOR E DOD</h2>
         <img src="imagens/dor.png" id="imgdor" alt="DOR">
         <img src="imagens/dod2.jpg" id="imgdod" alt="DOD">
-        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
+        <p class="dodp"">DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
             ser executada
             pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são
             importantes para
@@ -296,7 +296,7 @@
     <br>
 
     <section>
-        <h2 id="mvproduto" style="color:#d4af37; font-family: 'Source Sans 3'; font-weight: 900; font-size: 35px;" class="margin">MVP</h2>
+        <h2 id="mvproduto" class="margin">MVP</h2>
         <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o
             cliente. Ou seja,
             o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo.
