--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -103,7 +103,7 @@
             </a>
         </div>
         <div class="próximo">
-            <a href="scrum.html" class="btn" role="button" style="font-weight: 800; font-size: 17px;">PRÓXIMO</a>
+            <a href="scrum.html" class="btn" role="button" style="font-weight: 800; font-size: 17px; outline: none;">PRÓXIMO</a>
         </div>
     </footer>
 
